[package]
name = "locking-object-store"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "^0.1.68"
bytes = "*"
object_store = "^0.5.0"
futures = "*"
thiserror = "1"
tokio = { version = "^1.25.0", default-features = false}
serde = { version = "1", features = [ "derive" ]}

# dynamodb feature
#dynamodb_lock = { version = "^0.5.0", optional = true }
dynamodb_lock = { git = "https://github.com/delta-incubator/dynamodb-lock-rs", branch = "web-identity", optional = true }

# postres feature
sqlx = {version = "^0.6.3", default-features = false, optional = true }

[dev-dependencies]
object_store = { version = "^0.5.0", features = ["aws"]}

[features]
default = []
dynamodb = ["dynamodb_lock"]
postgres = ["sqlx/postgres"]
tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
tokio-rustls = ["sqlx/runtime-tokio-rustls"]
actix-native-tls = ["sqlx/runtime-actix-native-tls"]
actix-rustls = ["sqlx/runtime-actix-rustls"]
async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]
async-std-rustls = ["sqlx/runtime-async-std-rustls"]
