[package]
name = "locking-object-store"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "^0.1.68"
bytes = "*"
object_store = "0.9.0"
futures = "*"
thiserror = "1"
tokio = { version = "^1.25.0", default-features = false}
tracing = { version = "0.1.40", features = ["log"] }
serde = { version = "1", features = [ "derive" ]}
url = { version = "2.5.0", features = ["serde"] }

# dynamodb feature
dynamodb_lock = { version = "^0.6.1", optional = true }

# postres feature
sqlx = {version = "^0.6.3", default-features = false, optional = true }

# redis features
rslock = { version = "0.3.0", default-features = false, features = ["tokio-comp"], optional = true}

[features]
default = ["redis", "integration-test"]
# Integration test is a feature that just requires docker-compose to be running
integration-test = []
dynamodb = ["dynamodb_lock"]
postgres = ["sqlx/postgres"]
redis = [
        "dep:rslock",
]
tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
tokio-rustls = ["sqlx/runtime-tokio-rustls"]
actix-native-tls = ["sqlx/runtime-actix-native-tls"]
actix-rustls = ["sqlx/runtime-actix-rustls"]
async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]
async-std-rustls = ["sqlx/runtime-async-std-rustls"]
